# zuno-bc-wallet

./: .env  .gitignore  Dockerfile  main.py  pyproject.toml
docs/: CIRCLE_SETUP.md
scripts/: generate_entity_secret.py  register_entity_secret.py  test_circle_setup.py
src/: __init__.py  api.py  circle_client.py  config.py  models.py  networks.py  wallet_service.py
